--- a/css/sandra.css
+++ b/css/sandra.css
@@ -1,5 +1,5 @@
 body {
-    font:normal 36px helvetica;
+    font:normal FONTSIZE helvetica;
     word-break: break-word;
 }
 img {
@@ -14,21 +14,13 @@ video {
 table {
     border-collapse: collapse;
     background: #EEEEEE;
-    font:normal 36px helvetica;
+    font:normal FONTSIZE helvetica;
     color: #000;
     width: 100%;
 }
-caption { font-size: 1.3em; font-weight: bold; text-align: left; padding: 1em 4px; }
 td, th { padding: 3px 3px 4px 3px; line-height: 1.3em;}
 th { background: #AC4F53; color: #fff; font-weight: bold; text-align: right; padding-right: .5em; padding-left: 0.5em; vertical-align: top; width: 1px; white-space: nowrap; max-width: 70vw; text-overflow:ellipsis; overflow:hidden;}
-/* th { background: #AC4F53; color: #fff; font-weight: bold; text-align: right; padding-right: .5em; padding-left: 0.5em; vertical-align: top; width: 1px; white-space:nowrap; max-width: 25vw; text-overflow:ellipsis; overflow:hidden;} */
-thead th { background: #2C5755; text-align: center; }
 .odd td { background: #DDDDDD; }
 .odd th { background: #992220; }
 .rowstep td { background: #FFF; }
 .rowstep th { background: #FFF; }
-td a, td a:link { color: #325C91; }
-td a:visited { color: #466C8E; }
-td a:hover, td a:focus { color: #1E4C94; }
-th a, td a:active { color: #fff; }
-tfoot th, tfoot td { background: #2C5755; color: #fff; }
