--- a/css/doublecolumn.css
+++ b/css/doublecolumn.css
@@ -4,22 +4,24 @@ body {
 }
 img {
     width:100%;
-   max-width:100%;
+    max-width:100%;
 }
 
 video {
     width:100%;
-   max-width:100%;
+    max-width:100%;
 }
 table {
     border-collapse: collapse;
     background: #EEEEEE;
-    font:normal FONTSIZE helvetica;
     color: #000;
     width: 100%;
+    font:normal FONTSIZE helvetica;
+    word-break: break-word;
 }
 td, th { padding: 3px 3px 4px 3px; line-height: 1.3em;}
 th { background: #AC4F53; color: #fff; font-weight: bold; text-align: right; padding-right: .5em; padding-left: 0.5em; vertical-align: top; width: 1px; white-space: nowrap; max-width: 70vw; text-overflow:ellipsis; overflow:hidden;}
+td {white-space: pre-wrap;}
 .odd td { background: #DDDDDD; }
 .odd th { background: #992220; }
 .rowstep td { background: #FFF; }
