Dark mode support

--- a/css/doublecolumn.css
+++ b/css/doublecolumn.css
@@ -1,5 +1,6 @@
 body {
     font:normal FONTSIZE helvetica;
+    background-color: white;
     word-break: break-word;
 }
 img {
@@ -14,15 +15,15 @@ video {
 table {
     border-collapse: collapse;
     background: #EEEEEE;
-    color: #000;
+    color: black;
     width: 100%;
     font:normal FONTSIZE helvetica;
     word-break: break-word;
 }
 td, th { padding: 3px 3px 4px 3px; line-height: 1.3em;}
-th { background: #AC4F53; color: #fff; font-weight: bold; text-align: right; padding-right: .5em; padding-left: 0.5em; vertical-align: top; width: 1px; white-space: nowrap; max-width: 70vw; text-overflow:ellipsis; overflow:hidden;}
+th { background: #AC4F53; color: white; font-weight: bold; text-align: right; padding-right: .5em; padding-left: 0.5em; vertical-align: top; width: 1px; white-space: nowrap; max-width: 70vw; text-overflow:ellipsis; overflow:hidden;}
 td {white-space: pre-wrap;}
 .odd td { background: #DDDDDD; }
 .odd th { background: #992220; }
-.rowstep td { background: #FFF; }
-.rowstep th { background: #FFF; }
+.rowstep td { background: white; }
+.rowstep th { background: white; }
